--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/storage
 /storage/*.key
 /vendor
+/logs
 /.idea
 /.vagrant
 Homestead.json
@@ -10,3 +11,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+
